fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ width: 100%;
 .container{
   background-color: #053e5c;
   width:100vw;
-  height:100vh;
+  min-height:100vh;
   color:aliceblue;
   text-shadow: 3px 3px 2px rgba(4, 0, 0, 1);
   padding: 5rem;
@@ -239,7 +239,7 @@ width: 100%;
   {
   padding:2rem;
   width: 100vw;
-  height: 100%;
+  min-height: 100%;
   }
  
 }
